# internal/domain/entity/user.go
@@ -2,6 +2,7 @@ package entity
 
 import (
 	"errors"
+	"regexp"
 	"time"
 
 	"github.com/google/uuid"
@@ -18,16 +19,24 @@ type User struct {
 }
 
 var (
-	ErrEmailAlreadyUsed = errors.New("email is already used")
-	ErrUserNotFound     = errors.New("user not found")
+	ErrEmailAlreadyUsed  = errors.New("email is already used")
+	ErrUserNotFound      = errors.New("user not found")
+	ErrEmailInvalid      = errors.New("invalid email")
+	ErrPasswordIncorrect = errors.New("password is incorrect")
 )
 
 var (
-	CodeEmailAlreadyUsed = 10000
-	CodeUserNotFound     = 10001
+	CodeEmailAlreadyUsed  = 10000
+	CodeUserNotFound      = 10001
+	CodeEmailInvalid      = 10002
+	CodePasswordIncorrect = 10003
 )
 
 func NewUser(userName, email, password string) (*User, error) {
+	if !isValidEmail(email) {
+		return nil, ErrEmailInvalid
+	}
+
 	hashedPassword, err := hashPassword(password)
 	if err != nil {
 		return nil, err
@@ -49,6 +58,18 @@ func (u *User) UpdateUpdatedAt() {
 	u.UpdatedAt = time.Now()
 }
 
+func (u *User) VerifyPassword(password string) error {
+	if err := bcrypt.CompareHashAndPassword([]byte(u.Password), []byte(password)); err != nil {
+		switch err {
+		case bcrypt.ErrMismatchedHashAndPassword:
+			return ErrPasswordIncorrect
+		default:
+			return err
+		}
+	}
+	return nil
+}
+
 func hashPassword(password string) (string, error) {
 	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
 	if err != nil {
@@ -60,4 +81,10 @@ func hashPassword(password string) (string, error) {
 func genUUID() string {
 	id := uuid.New()
 	return id.String()
+}
+
+var emailRegex = regexp.MustCompile(`^[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}$`)
+
+func isValidEmail(email string) bool {
+	return emailRegex.MatchString(email)
 }
